# ainm_final_delivery

./: .gitmodules  README.md
astar_island/: WRITEUP.md  dashboard.py  ensemble_offline.py  experiment_v6.py  experiment_v7.py  experiment_v7_oof.py  local_ensemble.py  loo_eval.py  main.py  pyproject.toml  submit_ensemble.py  submit_r16_recipe.py  submit_round.sh
astar_island/infra/: SETUP.md  auto-submit.sh  gce-anp.sh  gce-backtest.sh  gce-convcnp-run.sh  gce-convcnp-startup.sh  gce-pipeline.sh  gce-quick-test.sh  gce-run.sh  gce-startup.sh  gce-submit.sh  gce-v5.sh  gce-v7.sh  install-cron.sh  launch-round.sh
astar_island/infra/azure/: Dockerfile  environment.yml  job.yml  pipeline.yml  run.sh  schedule.yml
astar_island/nm_ai_ml/astar/: attentive_np.py  best_predict.py  calibrate.py  client.py  convcnp.py  convcnp_residual.py  diagnostic_strategy.py  improved_strategy.py  ocp.py  param_inference.py  regime_detector.py  runner.py  sbi_pipeline.py  simulator.py  simulator_v2.py  spatial_predictor.py  spatial_predictor_attention.py  spatial_predictor_v2.py  spatial_predictor_v2_ours.py  strategy.py  synth_data.py  xgb_predictor.py
norgesgruppen/: NM_i_AI_internal_update.md  README.md  STATUS.md  config.json
norgesgruppen/.claude/projects/-Users-tomgra-Projects-private-ainm-main-comp/memory/: MEMORY.md  feedback_blocked_imports.md  feedback_no_submit.md  feedback_use_uv.md  project_competition.md
norgesgruppen/docs/: competition_report.tex  exploration_maps.tex  generate_report.py  status_report.tex
norgesgruppen/scripts/: monitor_azure_jobs.py
